--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.32.0",
     "@fontsource/dm-sans": "^4.5.0",
+    "@fontsource/lobster": "^4.5.9",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
